# study_autoencoder

./: .env.cuda  .gitignore  .pre-commit-config.yaml  Makefile  README.md  autoencoder.py  autoencoder2.py  pyproject.toml
.github/workflows/: ci.yml
app/: run_mnist_autoencoder.py  run_mnist_v_autoencoder.py  run_mnist_vae.py  run_mnist_vq_autoencoder.py  run_mnist_vqvae.py  run_vae_128.py
doc/: MEMO.md  Setup.md
docs/releases/: v1.1.md
misc/: conv2grayimg.py  download_mnist.py
models/: __init__.py  ae_linear.py  ae_mnist.py  autoencoder.py  checkpoint.py  dataset_mnist.py  mnist_utils.py  v_autoencoder.py  vae_mnist.py
models/image128/: __init__.py  dataset_image128.py  v_autoencoder_128.py
models/mnist/: __init__.py  autoencoder.py  base_ae.py  dataset_mnist.py  logging_utils.py  mnist_utils.py  plot_utils.py  v_autoencoder.py  vae.py  vq_autoencoder.py  vqvae.py
tests/: test_base_ae.py  test_pca.py  test_torch_basic.py  test_vae.py  test_vqvae.py
