[tool.poetry]
name = "study-autoencoder"
version = "0.1.0"
description = "Implementation of auto encoder"
authors = ["torupa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.4.0+cpu", source = "pytorch"}
torchvision = {version = "^0.19.0+cpu", source = "pytorch"}
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
