[project]
name = "study-autoencoder"
version = "0.1.0"
description = "Learning project for variational autoencoder with MNIST dataset"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0,<2.5.0",
    "torchvision>=0.15.0,<0.20.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "opencv-python>=4.5.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "app"]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"
extra-index-url = [
    "https://pypi.org/simple"
]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true