[project]
name = "study-autoencoder"
version = "0.1.0"
description = "Learning project for variational autoencoder with MNIST dataset"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0,<2.5.0",
    "torchvision>=0.15.0,<0.20.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "opencv-python>=4.5.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "app"]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cpu"
extra-index-url = [
    "https://pypi.org/simple"
]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
# Ruff configuration
line-length = 100
target-version = "py39"
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top (due to torch.manual_seed)
    "E501",  # line too long (handled by line-length)
    "F401",  # unused imports (some may be intentional)
    "F821",  # undefined name (some may be dynamic)
    "F841",  # unused variables (some may be intentional)
    "B007",  # loop variable not used (sometimes intentional)
    "UP008", # super() calls (keeping for compatibility)
    "UP031", # format string preferences (keeping existing style)
]

[tool.ruff.format]
# Format configuration
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]